# heyfood

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  deny.toml  install.sh  install.sh.sha256  pyproject.toml
.github/workflows/: ci.yml  post-release-smoke.yml  release.yml  rust-ci.yml
assets/brand/: banner.frames.json  provenance.json
assets/dietary/: provenance.json
crates/heyfood-agent-runtime/: Cargo.toml
crates/heyfood-agent-runtime/src/: lib.rs  registration.rs  service_api.rs  sse.rs
crates/heyfood-agent-runtime/tests/: http_sse.rs  phase2_service_api.rs
crates/heyfood-agent-runtime/tests/fixtures/: python_backend_refresh.json
crates/heyfood-application/: Cargo.toml
crates/heyfood-application/src/: ensure_session.rs  grocery.rs  health.rs  lib.rs  one_shot_turn.rs  ports.rs  run_turn.rs  state_writer.rs  supervisor.rs
crates/heyfood-application/tests/: ensure_session.rs  one_shot_turn.rs  phase1_foundation.rs  run_turn.rs
crates/heyfood-bin/: Cargo.toml
crates/heyfood-bin/src/: lib.rs  main.rs
crates/heyfood-bin/tests/: activated_commands.rs  credential_broker.rs  fail_closed.rs  installed_showcase.rs  native_composition.rs  phase0_qualification.rs  phase2_one_shot.rs
crates/heyfood-bin/tests/fixtures/: python-exported-turn.v1.json  python-phase2-command-parity.v1.json
crates/heyfood-cli/: Cargo.toml
crates/heyfood-cli/src/: lib.rs
crates/heyfood-cli/tests/: phase2_cli.rs
crates/heyfood-core/: Cargo.toml
crates/heyfood-core/src/: agent.rs  auth.rs  config.rs  error.rs  grocery.rs  health.rs  lib.rs  menu_watch.rs  migration.rs  network.rs  onboarding.rs  operation.rs  presentation.rs  transcription.rs  validation.rs  wire.rs
crates/heyfood-core/tests/: contracts.rs  transcription_contract.rs  wire_contracts.rs
crates/heyfood-installer/: Cargo.toml
crates/heyfood-installer/src/: main.rs
crates/heyfood-platform/: Cargo.toml
crates/heyfood-platform/src/: credential_broker.rs  lib.rs  persistence.rs  python_import.rs
crates/heyfood-platform/tests/: native_persistence.rs  phase1_platform.rs  python_state_import.rs  sensitive_export.rs
crates/heyfood-tui/: Cargo.toml
crates/heyfood-tui/src/: input.rs  lib.rs  loop_driver.rs  model.rs  render.rs  terminal.rs
crates/heyfood-tui/src/snapshots/: heyfood_tui__render__tests__streaming_120.snap  heyfood_tui__render__tests__streaming_40.snap  heyfood_tui__render__tests__streaming_80.snap
crates/heyfood-tui/tests/: showcase_contract.rs
crates/heyfood-voice/: Cargo.toml
crates/heyfood-voice/src/: lib.rs
crates/heyfood-windows-file/: Cargo.toml
crates/heyfood-windows-file/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/fixtures/: called_endpoints.73494a5.json  called_endpoints.9c6b919.json
crates/xtask/src/: json.rs  lib.rs  main.rs  sha256.rs
docs/: CAPABILITY_STATUS.md  CLI_CONTRACT.md  COMMAND_GRAMMAR.md  DIETARY_CATALOG.md  JSON_SCHEMAS.md  RELEASE_SIGNING.md  SHOWCASE_CONFORMANCE.md
docs/plans/: 2026-07-19-heyfood-conversational-ux-correction-plan.md  2026-07-19-heyfood-interactive-terminal-session-plan.md  2026-07-19-heyfood-rust-native-client-plan.md
docs/references/: banner.palette.json  banner.ts
docs/release-evidence/rust-phase0/: backend-idempotency-metrics-inventory.md  dependency-platform-trust-inventory.md  external-contract-status.md  grok-pattern-origin.json  phase0-inventory.json  qualification-evidence.json  reference-provenance-inventory.md  spike-report.md
docs/release-evidence/rust-phase1/: phase1-inventory.json  qualification-evidence.json  qualification-report.md
docs/release-evidence/rust-phase2/: dg-r2-status.md  remediation-inventory.json  remediation-report.md
fixtures/compat/: phase1-core-python-0.4.0.json
fixtures/config/: python-0.3.2-file-state.json  python-0.3.2-keyring-metadata.json  python-0.3.2-unbound-state.json
fixtures/contracts/: called-endpoints.json  health-contract-provenance.json  health-h1h2.v1.json  health-h3-daily-sync.v1.json
packaging/macos/: sign-and-notarize.sh
packaging/windows/: package.ps1  sign.ps1  smoke.ps1
schemas/: banner-frames.v1.schema.json  banner-palette.v1.schema.json  dietary-options.v2.schema.json  migration-ledger.v1.schema.json
schemas/v1/: heyfood-output.schema.json  transcription.schema.json
scripts/: regenerate_compat_fixtures.py  smoke_installed_cli.py  verify_artifacts.py
scripts/phase0/: export_contract_freeze.py
scripts/release/: checksums.sh  package.sh  smoke-archive.sh  smoke.sh  verify-assets.sh
src/heyfood_cli/: __init__.py  account_deletion.py  auth.py  auth_application.py  banner.py  client.py  config.py  credentials.py  diagnostics.py  household.py  main.py  onboarding.py  output.py  personality.py  presentation.py  render.py  theme.py  transcription_contract.py  validation.py  voice.py  voice_capture.py  voice_native.py  voice_policy.py
tests/: installer_contract.sh  test_account_deletion.py  test_auth.py  test_banner.py  test_called_endpoints_contract.py  test_channels.py  test_client.py  test_command_matrix.py  test_compatibility_fixtures.py  test_config.py  test_diagnostics.py  test_dietary_catalog.py  test_household.py  test_https_enforcement.py  test_input_policy.py  test_installer.py  test_json_schemas.py  test_login_capability_detection.py  test_main.py  test_onboarding.py  test_output_contract.py  test_package_metadata.py  test_personality.py  test_registration.py  test_render.py  test_transcription_client.py  test_transcription_contract.py  test_validation.py  test_voice.py  test_voice_browser_server.py  test_voice_capture.py  test_voice_commands.py  test_voice_native.py  test_voice_policy.py
tests/fixtures/: called_endpoints.json  python-cli-73494a57.tar
tests/migration/: non-pytest-invariants.json  python-node-ids.metadata.json  python-node-ids.txt  python-test-ledger.json  test_phase0_contract_freeze.py
tests/showcase/: core-release-matrix.v1.json  showcase-contract.v1.json
(+104 files in other folders)
