[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.94.0"
license = "Apache-2.0"
repository = "https://github.com/frntrllc/heyfood"
publish = false

[workspace.dependencies]
cargo_metadata = { version = "0.23", default-features = false }
clap = { version = "4", default-features = false }
clap_complete = { version = "4", default-features = false }
cpal = { version = "0.16", default-features = false }
crossterm = { version = "0.29", default-features = false }
directories = { version = "6", default-features = false }
eventsource-stream = { version = "0.2", default-features = false }
fs2 = { version = "0.4", default-features = false }
hound = { version = "3", default-features = false }
insta = { version = "1", default-features = false }
keyring = { version = "3", default-features = false }
portable-pty = { version = "0.9", default-features = false }
proptest = { version = "1", default-features = false }
ratatui = { version = "0.30.2", default-features = false }
reqwest = { version = "0.12", default-features = false }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false }
webbrowser = { version = "1", default-features = false }
zeroize = { version = "1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
