[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "heyfood-cli"
dynamic = ["version"]
description = "Developer-first CLI for personalized food and dietary guidance from hello.food."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [{ name = "FRNTR, LLC" }]
keywords = ["cli", "dietary", "food", "nutrition", "restaurants"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "click>=8.1,<8.2",
  "httpx>=0.27,<1",
  "rich>=13,<15",
  "typer>=0.20,<0.24",
]

[project.optional-dependencies]
keyring = [
  "keyring>=25,<27",
]
dev = [
  "pytest>=8",
]

[project.scripts]
heyfood = "heyfood_cli.main:app"

[project.urls]
Homepage = "https://hello.food/heyfood"
Documentation = "https://github.com/frntrllc/heyfood#readme"
Repository = "https://github.com/frntrllc/heyfood"
Issues = "https://github.com/frntrllc/heyfood/issues"
Changelog = "https://github.com/frntrllc/heyfood/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/heyfood_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/LICENSE",
  "/COPYRIGHT",
  "/README.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/CODE_OF_CONDUCT.md",
  "/SUPPORT.md",
  "/DEVELOPMENT.md",
  "/CHANGELOG.md",
  "/RELEASING.md",
  "/install.sh",
  "/install.sh.sha256",
  "/docs",
  "/schemas",
  "/pyproject.toml",
]

[tool.hatch.version]
path = "src/heyfood_cli/__init__.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
