[package]
name = "heyfood-agent-runtime"
description = "Authenticated HTTP and SSE adapters for heyfood."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
eventsource-stream = { workspace = true, features = ["std"] }
heyfood-application = { version = "=0.4.1", path = "../heyfood-application" }
heyfood-core = { version = "=0.4.1", path = "../heyfood-core" }
reqwest = { workspace = true, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["attributes", "std"] }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }

[lints]
workspace = true
