[package]
name = "heyfood-application"
description = "UI-independent heyfood use cases and outbound ports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
heyfood-core = { path = "../heyfood-core" }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["attributes", "std"] }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }

[lints]
workspace = true
