[package]
name = "heyfood-application"
description = "UI-independent heyfood use cases and outbound ports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
heyfood-core = { version = "=0.4.0", path = "../heyfood-core" }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["attributes", "std"] }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }

[lints]
workspace = true
