[package]
name = "heyfood-bin"
description = "Native heyfood executable composition root."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "heyfood"
path = "src/main.rs"

[features]
default = []
native-credentials = ["heyfood-platform/native-credentials"]

[dependencies]
heyfood-agent-runtime = { version = "=0.4.0", path = "../heyfood-agent-runtime" }
heyfood-application = { version = "=0.4.0", path = "../heyfood-application" }
heyfood-cli = { version = "=0.4.0", path = "../heyfood-cli" }
heyfood-core = { version = "=0.4.0", path = "../heyfood-core" }
heyfood-platform = { version = "=0.4.0", path = "../heyfood-platform" }
heyfood-tui = { version = "=0.4.0", path = "../heyfood-tui" }
heyfood-voice = { version = "=0.4.0", path = "../heyfood-voice" }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "std"] }
portable-pty.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }

[lints]
workspace = true
