[package]
name = "heyfood-cli"
description = "Classic, ANSI, and JSON command-line presentation for heyfood."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
clap_complete.workspace = true
heyfood-application = { version = "=0.4.0", path = "../heyfood-application" }
heyfood-core = { version = "=0.4.0", path = "../heyfood-core" }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }

[lints]
workspace = true
