[package]
name = "heyfood-installer"
description = "Standalone release manifest verifier and artifact installer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
heyfood-core = { path = "../heyfood-core" }

[lints]
workspace = true
