[package]
name = "heyfood-voice"
description = "Target-gated audio capture and encoding adapters for heyfood."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
native-audio = ["dep:cpal", "dep:hound"]

[dependencies]
heyfood-application = { version = "=0.5.0", path = "../heyfood-application" }
heyfood-core = { version = "=0.5.0", path = "../heyfood-core" }
tracing = { workspace = true, features = ["attributes", "std"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
cpal = { workspace = true, optional = true }
hound = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }

[lints]
workspace = true
