[package]
name = "heyfood-windows-file"
description = "Audited Windows handle primitives for owner-only atomic files."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

[lints.rust]
unsafe_code = "deny"
