[package]
name = "xtask"
description = "Repository policy and release validation tasks for heyfood."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
cargo_metadata.workspace = true

[lints]
workspace = true
